src/gen/java/io/github/dvischi/expr_rule_parser/ExprRuleParser.java
// Generated from src/main/antlr4/io/github/dvischi/expr_rule_parser/ExprRuleParser.g4 by ANTLR 4.13.2
package io.github.dvischi.expr_rule_parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ExprRuleParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		VAR=1, FUNC=2, RULE=3, DQUOTE=4, LPAREN=5, RPAREN=6, LBRACK=7, RBRACK=8, 
		COLON=9, SEMI=10, COMMA=11, ARROW=12, NOT=13, AND=14, OR=15, ASSIGNMENT=16, 
		GT=17, LT=18, EQUAL=19, NOTEQUAL=20, ADD=21, SUB=22, MUL=23, DIV=24, CONTAINS=25, 
		CONTAINSALL=26, WS=27, BOOLEAN=28, NUMBER=29, WORD=30, STRING=31;
	public static final int
		RULE_stmts = 0, RULE_stmt = 1, RULE_varDefStmt = 2, RULE_funcDefStmt = 3, 
		RULE_funcDefParams = 4, RULE_ruleStmt = 5, RULE_baseExpr = 6, RULE_andExpr = 7, 
		RULE_notExpr = 8, RULE_relExpr = 9, RULE_addExpr = 10, RULE_mulExpr = 11, 
		RULE_relOpr = 12, RULE_addOpr = 13, RULE_mulOpr = 14, RULE_literal = 15, 
		RULE_listItem = 16, RULE_list = 17, RULE_funcParams = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"stmts", "stmt", "varDefStmt", "funcDefStmt", "funcDefParams", "ruleStmt", 
			"baseExpr", "andExpr", "notExpr", "relExpr", "addExpr", "mulExpr", "relOpr", 
			"addOpr", "mulOpr", "literal", "listItem", "list", "funcParams"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'var'", "'func'", "'rule'", "'\"'", "'('", "')'", "'['", "']'", 
			"':'", "';'", "','", "'->'", "'not'", "'and'", "'or'", "'='", "'>'", 
			"'<'", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'contains'", "'contains all'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "VAR", "FUNC", "RULE", "DQUOTE", "LPAREN", "RPAREN", "LBRACK", 
			"RBRACK", "COLON", "SEMI", "COMMA", "ARROW", "NOT", "AND", "OR", "ASSIGNMENT", 
			"GT", "LT", "EQUAL", "NOTEQUAL", "ADD", "SUB", "MUL", "DIV", "CONTAINS", 
			"CONTAINSALL", "WS", "BOOLEAN", "NUMBER", "WORD", "STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ExprRuleParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprRuleParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtsContext extends ParserRuleContext {
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterStmts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitStmts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitStmts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtsContext stmts() throws RecognitionException {
		StmtsContext _localctx = new StmtsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_stmts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(38);
				match(WS);
				}
				}
				setState(43);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 14L) != 0)) {
				{
				{
				setState(44);
				stmt();
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(45);
					match(WS);
					}
					}
					setState(50);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public VarDefStmtContext varDefStmt() {
			return getRuleContext(VarDefStmtContext.class,0);
		}
		public FuncDefStmtContext funcDefStmt() {
			return getRuleContext(FuncDefStmtContext.class,0);
		}
		public RuleStmtContext ruleStmt() {
			return getRuleContext(RuleStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(59);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(56);
				varDefStmt();
				}
				break;
			case FUNC:
				enterOuterAlt(_localctx, 2);
				{
				setState(57);
				funcDefStmt();
				}
				break;
			case RULE:
				enterOuterAlt(_localctx, 3);
				{
				setState(58);
				ruleStmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class VarDefStmtContext extends ParserRuleContext {
		public Token varName;
		public BaseExprContext varDef;
		public TerminalNode VAR() { return getToken(ExprRuleParser.VAR, 0); }
		public TerminalNode COLON() { return getToken(ExprRuleParser.COLON, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(ExprRuleParser.ASSIGNMENT, 0); }
		public TerminalNode SEMI() { return getToken(ExprRuleParser.SEMI, 0); }
		public TerminalNode WORD() { return getToken(ExprRuleParser.WORD, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public VarDefStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDefStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterVarDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitVarDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitVarDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDefStmtContext varDefStmt() throws RecognitionException {
		VarDefStmtContext _localctx = new VarDefStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDefStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(VAR);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				match(WS);
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(67);
			((VarDefStmtContext)_localctx).varName = match(WORD);
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(68);
				match(WS);
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(COLON);
			setState(75);
			match(ASSIGNMENT);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(76);
				match(WS);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			((VarDefStmtContext)_localctx).varDef = baseExpr();
			setState(83);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefStmtContext extends ParserRuleContext {
		public Token funcName;
		public BaseExprContext funcDef;
		public TerminalNode FUNC() { return getToken(ExprRuleParser.FUNC, 0); }
		public TerminalNode COLON() { return getToken(ExprRuleParser.COLON, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(ExprRuleParser.ASSIGNMENT, 0); }
		public TerminalNode LPAREN() { return getToken(ExprRuleParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(ExprRuleParser.RPAREN, 0); }
		public TerminalNode ARROW() { return getToken(ExprRuleParser.ARROW, 0); }
		public TerminalNode SEMI() { return getToken(ExprRuleParser.SEMI, 0); }
		public TerminalNode WORD() { return getToken(ExprRuleParser.WORD, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public FuncDefParamsContext funcDefParams() {
			return getRuleContext(FuncDefParamsContext.class,0);
		}
		public FuncDefStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDefStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterFuncDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitFuncDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitFuncDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefStmtContext funcDefStmt() throws RecognitionException {
		FuncDefStmtContext _localctx = new FuncDefStmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_funcDefStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(FUNC);
			setState(87); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(86);
				match(WS);
				}
				}
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(91);
			((FuncDefStmtContext)_localctx).funcName = match(WORD);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(92);
				match(WS);
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(98);
			match(COLON);
			setState(99);
			match(ASSIGNMENT);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(100);
				match(WS);
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(LPAREN);
			setState(108);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WS || _la==WORD) {
				{
				setState(107);
				funcDefParams();
				}
			}

			setState(110);
			match(RPAREN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(111);
				match(WS);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(117);
			match(ARROW);
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(118);
				match(WS);
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(124);
			((FuncDefStmtContext)_localctx).funcDef = baseExpr();
			setState(125);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefParamsContext extends ParserRuleContext {
		public Token paramName;
		public Token addParamName;
		public List<TerminalNode> WORD() { return getTokens(ExprRuleParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(ExprRuleParser.WORD, i);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(ExprRuleParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(ExprRuleParser.COMMA, i);
		}
		public FuncDefParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDefParams; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterFuncDefParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitFuncDefParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitFuncDefParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FuncDefParamsContext funcDefParams() throws RecognitionException {
		FuncDefParamsContext _localctx = new FuncDefParamsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_funcDefParams);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(127);
				match(WS);
				}
				}
				setState(132);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(133);
			((FuncDefParamsContext)_localctx).paramName = match(WORD);
			setState(144);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(137);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(134);
						match(WS);
						}
						}
						setState(139);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(140);
					match(COMMA);
					setState(141);
					((FuncDefParamsContext)_localctx).addParamName = match(WORD);
					}
					} 
				}
				setState(146);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(147);
				match(WS);
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RuleStmtContext extends ParserRuleContext {
		public Token ruleName;
		public BaseExprContext ruleDef;
		public TerminalNode RULE() { return getToken(ExprRuleParser.RULE, 0); }
		public TerminalNode COLON() { return getToken(ExprRuleParser.COLON, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(ExprRuleParser.ASSIGNMENT, 0); }
		public TerminalNode SEMI() { return getToken(ExprRuleParser.SEMI, 0); }
		public TerminalNode WORD() { return getToken(ExprRuleParser.WORD, 0); }
		public BaseExprContext baseExpr() {
			return getRuleContext(BaseExprContext.class,0);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public RuleStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ruleStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterRuleStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitRuleStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitRuleStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RuleStmtContext ruleStmt() throws RecognitionException {
		RuleStmtContext _localctx = new RuleStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ruleStmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(RULE);
			setState(155); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(154);
				match(WS);
				}
				}
				setState(157); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==WS );
			setState(159);
			((RuleStmtContext)_localctx).ruleName = match(WORD);
			setState(163);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(160);
				match(WS);
				}
				}
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			match(COLON);
			setState(167);
			match(ASSIGNMENT);
			setState(171);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(168);
				match(WS);
				}
				}
				setState(173);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(174);
			((RuleStmtContext)_localctx).ruleDef = baseExpr();
			setState(175);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BaseExprContext extends ParserRuleContext {
		public List<AndExprContext> andExpr() {
			return getRuleContexts(AndExprContext.class);
		}
		public AndExprContext andExpr(int i) {
			return getRuleContext(AndExprContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(ExprRuleParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(ExprRuleParser.OR, i);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public BaseExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterBaseExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitBaseExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitBaseExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BaseExprContext baseExpr() throws RecognitionException {
		BaseExprContext _localctx = new BaseExprContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_baseExpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(177);
			andExpr();
			setState(192);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(179); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(178);
						match(WS);
						}
						}
						setState(181); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(183);
					match(OR);
					setState(185); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(184);
						match(WS);
						}
						}
						setState(187); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(189);
					andExpr();
					}
					} 
				}
				setState(194);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,22,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AndExprContext extends ParserRuleContext {
		public List<NotExprContext> notExpr() {
			return getRuleContexts(NotExprContext.class);
		}
		public NotExprContext notExpr(int i) {
			return getRuleContext(NotExprContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(ExprRuleParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(ExprRuleParser.AND, i);
		}
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public AndExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_andExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterAndExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitAndExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitAndExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndExprContext andExpr() throws RecognitionException {
		AndExprContext _localctx = new AndExprContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_andExpr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(195);
			notExpr();
			setState(210);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(197); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(196);
						match(WS);
						}
						}
						setState(199); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(201);
					match(AND);
					setState(203); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(202);
						match(WS);
						}
						}
						setState(205); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					setState(207);
					notExpr();
					}
					} 
				}
				setState(212);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,25,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NotExprContext extends ParserRuleContext {
		public RelExprContext relExpr() {
			return getRuleContext(RelExprContext.class,0);
		}
		public TerminalNode NOT() { return getToken(ExprRuleParser.NOT, 0); }
		public List<TerminalNode> WS() { return getTokens(ExprRuleParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(ExprRuleParser.WS, i);
		}
		public TerminalNode LPAREN() { return getToken(ExprRuleParser.LPAREN, 0); }
		public NotExprContext notExpr() {
			return getRuleContext(NotExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(ExprRuleParser.RPAREN, 0); }
		public NotExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_notExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).enterNotExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ExprRuleParserListener ) ((ExprRuleParserListener)listener).exitNotExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ExprRuleParserVisitor ) return ((ExprRuleParserVisitor<? extends T>)visitor).visitNotExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NotExprContext notExpr() throws RecognitionException {
		NotExprContext _localctx = new NotExprContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_notExpr);
		int _la;
		try {
			setState(227);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,28,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(219);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==NOT) {
					{
					setState(213);
					match(NOT);
					setState(215); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(214);
						match(WS);
						}
						}
						setState(217); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==WS );
					}
				}
